package com.simpleboard.board.permission.domain.vo;

/**
 * <b>Permission</b> 열거형.
 *
 * <p>권한의 종류
 *
 * @domain enum
 * @since 1.0
 */
public enum Permission {
  DELETE_BOARD,
  CREATE_BOARD
}
