@startuml

package "context map" {
    package "board context"{
        package "board"{
            abstract Board <<Aggregate Root>>{
            }
            struct Manager <<Value Object>>{
            }
            Manager -- Board
        }

        package "post"{
            abstract Post <<Aggregate Root>>{
            }
            class GuestPost <<ImplClass>>{
            }
            class MemberPost <<ImplClass>>{
            }
            '해시태그
            entity HashTag <<Entity>>{
            }
            struct Tags <<Value Object>>{
            }
            Post -- Tags
            Tags "1" --> "N" HashTag
            '좋아요
            entity PostLike <<Entity>>{
            }
            struct Likes <<Value Object>>{
            }
            Post -- Likes
            Likes "1" --> "N" PostLike
        }

        package "comment"{
            abstract Comment <<Aggregate Root>>{
            }
            class GuestComment <<ImplClass>>{
            }
            class MemberComment <<ImplClass>>{
            }
        }

        package "userBoardRole"{
            abstract UserBoardRole <<Aggregate Root>>{
            }
        }

        GuestPost --|> Post
        MemberPost --|> Post
        GuestComment --|> Comment
        MemberComment --|> Comment

    }

    package "member context"{
        package "member"{
          abstract Member <<Aggregate Root>>{
          }
          struct NickName <<Value Object>>{
          }
          struct BirthYear <<Value Object>>{
          }
          Member -- NickName
          Member -- BirthYear
        }
    }

  package "permission context" {
        package "permission" {
            abstract PermissionPolicy <<Aggregate Root>> {
            }

            entity ManagerAssignment <<Entity>> {
            }

            struct Role <<Value Object>> {
            }

            enum RoleType {
            }

            enum Permission {
            }

            Role "1" --> "N" Permission

            PermissionPolicy "1" -- "N" ManagerAssignment
            ManagerAssignment "N" -- "1" Role
            Role -- RoleType
        }
    }

    package "auth context" {
        package "auth"{
            entity Auth <<Aggregate Root>> {
            }
            struct Password <<Value Object>>{
            }

            Auth -- Password
        }
    }


    Board <.. Post

    MemberPost ..> Member
    PostLike ..> Member
    MemberComment ..> Member
    Comment ..> Post
    Comment --> Comment
    Board ..> PermissionPolicy

    Auth ..> Member

}
@enduml
